--- a/index.html
+++ b/index.html
@@ -701,10 +701,10 @@
                     <div class="swiper-wrapper">
                         <!--==================== PORTFOLIO 1 ====================-->
                         <div class="portfolio__content grid swiper-slide">
-                            <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
+                            <img src="assets/img/mockups/react-work.png" alt="" class="portfolio__img">
                             <div class="portfolio__data">
-                                <h3 class="portfolio__title">Web Design</h3>
-                                <p class="portfolio__description">I design the user interface for your website using modern technologies.</p>
+                                <h3 class="portfolio__title">Reac Work App</h3>
+                                <p class="portfolio__description">A mini project using React to post jobs and consult them</p>
                                 <a href="" class="button button--flex button--small portfolio__button">
                                     View More <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -713,11 +713,11 @@
 
                         <!--==================== PORTFOLIO 2 ====================-->
                         <div class="portfolio__content grid swiper-slide">
-                            <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
+                            <img src="assets/img/mockups/reflexatento.png" alt="" class="portfolio__img">
                             <div class="portfolio__data">
-                                <h3 class="portfolio__title">Web Development</h3>
-                                <p class="portfolio__description">I develop the backend of your website using modern technologies.</p>
-                                <a href="" class="button button--flex button--small portfolio__button">
+                                <h3 class="portfolio__title">REFLEXATENTO</h3>
+                                <p class="portfolio__description">a showcase website that I built for a construction and renovation company un portugal</p>
+                                <a href="https://reflexatento.pt/"  class="button button--flex button--small portfolio__button">
                                     View More <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
                             </div>
@@ -725,10 +725,10 @@
 
                         <!--==================== PORTFOLIO 3 ====================-->
                         <div class="portfolio__content grid swiper-slide">
-                            <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
+                            <img src="assets/img/mockups/ministere.png" alt="" class="portfolio__img">
                             <div class="portfolio__data">
-                                <h3 class="portfolio__title">Mobile App Design</h3>
-                                <p class="portfolio__description">I design the user interface for your mobile app using modern technologies.</p>
+                                <h3 class="portfolio__title">website for the Ministry of Youth and Sports</h3>
+                                <p class="portfolio__description">A conception website for the summer camps in algeria </p>
                                 <a href="" class="button button--flex button--small portfolio__button">
                                     View More <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -857,7 +857,7 @@
 
                             <div>
                                 <h3 class="contact__title">Call Me</h3>
-                                <span class="contact__subtitle">+123 456 789</span>
+                                <a href="tel:+213541268509">                                <span class="contact__subtitle">+213 541 26 85 09</span></a>
                             </div>
                         </div>
 
@@ -866,14 +866,16 @@
 
                             <div>
                                 <h3 class="contact__title">Email</h3>
-                                <span class="contact__subtitle"> amine@gmail.com </span>
+                                <a href="">
+                                    <span class="contact__subtitle"> amine@gmail.com </span>
+                                </a>
                             </div>
                         </div>
                         <div class="contact__information">
                             <i class="uil uil-map-marker contact__icon"></i>
 
                             <div>
-                                <h3 class="contact__title">Email</h3>
+                                <h3 class="contact__title">Place</h3>
                                 <span class="contact__subtitle">Mostaganem - Algeria</span>
                             </div>
                         </div>
