Netlify auto forms

--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
                         </div>
                     </div>
 
-                    <form action="" class="contact__form grid">
+                    <form name="contact" method="POST" data-netlify="true" class="contact__form grid">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="" class="contact__label">Name</label>
