--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="/assets/css/styles.css">
 
-        <title>Responsive Portfolio Website</title>
+        <title>Amine DH</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
@@ -73,14 +73,14 @@
                 <div class="home__container container grid">
                     <div class="home__content grid">
                         <div class="home__social">
-                            <a href="" target="_blank" class="home__social-icon">
+                            <a href="https://www.linkedin.com/in/amine-dahah-1b677722b/" target="_blank" class="home__social-icon">
                                 <i class="uil uil-linkedin-alt"></i>
                             </a>
-                            <a href="" target="_blank" class="home__social-icon">
+                            <a href="https://github.com/aminedh27" target="_blank" class="home__social-icon">
                                 <i class="uil uil-github-alt"></i>
                             </a>
-                            <a href="" target="_blank" class="home__social-icon">
-                                <i class="uil uil-dribbble"></i>
+                            <a href="https://wa.me/213541221311" target="_blank" class="home__social-icon">
+                                <i class="uil uil-whatsapp"></i>
                             </a>
                         </div>
 
@@ -149,7 +149,7 @@
                         </div>
 
                         <div class="about__buttons">
-                            <a download="" href="" class="button button--flex">
+                            <a download="amineDH-CV.pdf" href="./assets/pdf/amineDH-CV.pdf" class="button button--flex">
                                 Download CV <i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
@@ -703,7 +703,7 @@
                         <div class="portfolio__content grid swiper-slide">
                             <img src="assets/img/mockups/react-work.png" alt="" class="portfolio__img">
                             <div class="portfolio__data">
-                                <h3 class="portfolio__title">Reac Work App</h3>
+                                <h3 class="portfolio__title">React Work App</h3>
                                 <p class="portfolio__description">A mini project using React to post jobs and consult them</p>
                                 <a href="" class="button button--flex button--small portfolio__button">
                                     View More <i class="uil uil-arrow-right button__icon"></i>
@@ -729,6 +729,28 @@
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">website for the Ministry of Youth and Sports</h3>
                                 <p class="portfolio__description">A conception website for the summer camps in algeria </p>
+                                <a href="" class="button button--flex button--small portfolio__button">
+                                    View More <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <!--==================== PORTFOLIO 4 ====================-->
+                        <div class="portfolio__content grid swiper-slide">
+                            <img src="assets/img/mockups/jib.png" alt="" class="portfolio__img">
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Local e-commerce Store</h3>
+                                <p class="portfolio__description">Online Grocery Store for a local seller</p>
+                                <a href="" class="button button--flex button--small portfolio__button">
+                                    View More <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <!--==================== PORTFOLIO 5 ====================-->
+                        <div class="portfolio__content grid swiper-slide">
+                            <img src="assets/img/mockups/telecom.png" alt="" class="portfolio__img">
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Algérie Telecom Website remake</h3>
+                                <p class="portfolio__description">this website was made in Telehack event</p>
                                 <a href="" class="button button--flex button--small portfolio__button">
                                     View More <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -938,14 +960,14 @@
                     </ul>
     
                     <div class="footer__socials">
-                        <a href="" class="footer__social">
+                        <a href="https://www.linkedin.com/in/amine-dahah-1b677722b/" class="footer__social">
                             <i class="uil uil-linkedin footer__icon"></i>
                         </a>
-                        <a href="" class="footer__social">
+                        <a href="https://github.com/aminedh27" class="footer__social">
                             <i class="uil uil-github footer__icon"></i>
                         </a>
-                        <a href="" class="footer__social">
-                            <i class="uil uil-twitter footer__icon"></i>
+                        <a href="https://wa.me/213541221311" class="footer__social">
+                            <i class="uil uil-whatsapp footer__icon"></i>
                         </a>
                     </div>
                 </div>
