--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Responsive Design</h3>
-                                        <span class="skills__number">65%</span>
+                                        <span class="skills__number">85%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__responsive"></span>
@@ -364,7 +364,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Website Design</h3>
-                                        <span class="skills__number">80%</span>
+                                        <span class="skills__number">90%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__website"></span>
@@ -798,11 +798,11 @@
                         <div class="testimonial__content swiper-slide">
                             <div class="testimonial__data">
                                 <div class="testimonial__header">
-                                    <img src="assets/img/testimonial1.jpg" alt="" class="testimonial__img">
+                                    <img src="assets/img/ilies.png" alt="" class="testimonial__img">
                                     
                                     <div>
-                                        <h3 class="testimonial__name">Sara Smith</h3>
-                                        <span class="testimonial__client">Client</span>
+                                        <h3 class="testimonial__name">Ould Menouer Ilies</h3>
+                                        <span class="testimonial__client">Mobile development Lead</span>
                                     </div>
                                 </div>
 
@@ -813,7 +813,11 @@
                                     <i class="uil uil-star testimonial__icon-star"></i>
                                 </div>
                             </div>
-                            <p class="testimonial__description">I am very happy with the work done by Amine. He is very professional and always delivers on time. I would recommend him to anyone looking for a web developer.</p>
+                            <p class="testimonial__description">I had the pleasure of studying alongside Zeyd and collaborating with him in our scientific club, and I can confidently say that he is an exceptional software engineer. Zeyd is excels in collaboration and communication, making him a valuable team member and leader in any project.
+
+                                I confirm that Zeyd is proficient with Javascript,C++, Python and has solid understanding of artificial intelligence and machine learning fundamentals set him apart as a versatile engineer.
+                                
+                                I highly recommend him for any software engineering project. He is a talented individual with a bright future ahead!</p>
                         </div>
 
                         <!--==================== TESTIMONIAL 2 ====================-->
@@ -836,17 +840,17 @@
 
 
                             </div>
-                            <p class="testimonial__description">Amine is a very talented web developer. He is very creative and always comes up with new ideas. I am very happy with the work he has done for me.</p>
+                            <p class="testimonial__description">Zeyd is a very talented web developer. He is very creative and always comes up with new ideas. I am very happy with the work he has done for me.</p>
                         </div>
 
                         <!--==================== TESTIMONIAL 3 ====================-->
                         <div class="testimonial__content swiper-slide">
                             <div class="testimonial__data">
                                 <div class="testimonial__header">
-                                    <img src="assets/img/testimonial3.jpg" alt="" class="testimonial__img">
+                                    <img src="assets/img/bilel.png" alt="" class="testimonial__img">
                                     <div>
-                                        <h3 class="testimonial__name">Jessica Brown</h3>
-                                        <span class="testimonial__client">Client</span>
+                                        <h3 class="testimonial__name">Bilel Loubar</h3>
+                                        <span class="testimonial__client">CEO at Spintechs</span>
                                     </div>
                                 </div>
 
@@ -859,7 +863,7 @@
 
 
                             </div>
-                            <p class="testimonial__description">I am very happy with the work done by Amine. He is very professional and always delivers on time. I would recommend him to anyone looking for a web developer.</p>
+                            <p class="testimonial__description">I am very happy with the works done by Zeyd. He is very professional and always delivers on time. I would recommend him to anyone looking for a web developer.</p>
                         </div>
                     </div>
 
