--- a/index.html
+++ b/index.html
@@ -768,6 +768,17 @@
                                 </a>
                             </div>
                         </div>
+                        <!--==================== PORTFOLIO 5 ====================-->
+                        <div class="portfolio__content grid swiper-slide">
+                            <img src="assets/img/mockups/mockup2.png" alt="" class="portfolio__img">
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Text Editor</h3>
+                                <p class="portfolio__description">Collaborative real-time document editor that allows multiple users to work on the same document simultaneously.</p>
+                                <a href="" class="button button--flex button--small portfolio__button">
+                                    View More <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="swiper-button-next">
