--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         </div>
 
                         <div class="about__buttons">
-                            <a download="amineDH-CV.pdf" href="./assets/pdf/zeyd-cv.pdf" class="button button--flex">
+                            <a download="Zeyd-SAIAD-CV.pdf" href="./assets/pdf/zeyd-cv.pdf" class="button button--flex">
                                 Download CV <i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
